# mkmk

./: .gitignore  .prettierignore  Cargo.toml  LICENSE  Makefile  README.md  command-history.txt  cspell.json  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: coverage.yml  publish.yml  tests.yml
.husky/: pre-commit
src/: lib.rs  main.rs
