[package]
name = "mkmk"
version = "0.1.1"
description = "`mkdir -p` and `touch`"
repository = "https://github.com/seijinrosen/mkmk"
readme = "README.md"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.1.8", features = ["derive"] }

[dev-dependencies]
tempfile = "3.4.0"
